more more more learning

--- a/learning_ds.ipynb
+++ b/learning_ds.ipynb
@@ -9,16 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +162,346 @@
     "grades_students[grades_students <= 5]\n",
     "print(grades_students[mask_grades])\n",
     "print(grades_students[grades_students <= 5])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pandas series e DataFrames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    12\n",
+      "1    23\n",
+      "2    34\n",
+      "3    45\n",
+      "4    56\n",
+      "5    67\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "listapd = [12,23,34,45,56,67]\n",
+    "series_pandas = pd.Series(listapd)\n",
+    "print(series_pandas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lucas      7.7\n",
+      "Eduardo    9.2\n",
+      "Gabriel    6.5\n",
+      "dtype: float64\n",
+      "count    3.000000\n",
+      "mean     7.800000\n",
+      "std      1.352775\n",
+      "min      6.500000\n",
+      "25%      7.100000\n",
+      "50%      7.700000\n",
+      "75%      8.450000\n",
+      "max      9.200000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "notas = {'Lucas': 7.7,'Eduardo':9.2,'Gabriel':6.5}\n",
+    "serie_notas = pd.Series(notas)\n",
+    "print(serie_notas)\n",
+    "print(serie_notas.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(23.4)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_notas.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary = {'Autores': ['Rick Riordan', 'J. R. R. Tolkien', 'Rick Riordan', 'Machado de Assis'],\n",
+    "              'Titulos':['O Ladrão de Raios', 'A Sociedade do Anel', 'Mar de Monstros', 'Memórias Postumas de Brás Cubas'],\n",
+    "              'Preço':[41.2,35.7,39.5,40.5]}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Autores</th>\n",
+       "      <th>Titulos</th>\n",
+       "      <th>Preço</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rick Riordan</td>\n",
+       "      <td>O Ladrão de Raios</td>\n",
+       "      <td>41.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>J. R. R. Tolkien</td>\n",
+       "      <td>A Sociedade do Anel</td>\n",
+       "      <td>35.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rick Riordan</td>\n",
+       "      <td>Mar de Monstros</td>\n",
+       "      <td>39.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Machado de Assis</td>\n",
+       "      <td>Memórias Postumas de Brás Cubas</td>\n",
+       "      <td>40.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Autores                          Titulos  Preço\n",
+       "0      Rick Riordan                O Ladrão de Raios   41.2\n",
+       "1  J. R. R. Tolkien              A Sociedade do Anel   35.7\n",
+       "2      Rick Riordan                  Mar de Monstros   39.5\n",
+       "3  Machado de Assis  Memórias Postumas de Brás Cubas   40.5"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Rick Riordan\n",
+       "1    J. R. R. Tolkien\n",
+       "2        Rick Riordan\n",
+       "3    Machado de Assis\n",
+       "Name: Autores, dtype: object"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Autores']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'J. R. R. Tolkien'"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Autores'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(39.225)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Preço'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Autores</th>\n",
+       "      <th>Titulos</th>\n",
+       "      <th>Preço</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rick Riordan</td>\n",
+       "      <td>O Ladrão de Raios</td>\n",
+       "      <td>41.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rick Riordan</td>\n",
+       "      <td>Mar de Monstros</td>\n",
+       "      <td>39.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Autores            Titulos  Preço\n",
+       "0  Rick Riordan  O Ladrão de Raios   41.2\n",
+       "2  Rick Riordan    Mar de Monstros   39.5"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mascara = (df['Autores'] == 'Rick Riordan')\n",
+    "df[mascara]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.at[4,'Preço'] = 40.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Autores                          Titulos  Preço\n",
+      "0      Rick Riordan                O Ladrão de Raios   41.2\n",
+      "1  J. R. R. Tolkien              A Sociedade do Anel   35.7\n",
+      "2      Rick Riordan                  Mar de Monstros   39.5\n",
+      "3  Machado de Assis  Memórias Postumas de Brás Cubas   40.5\n",
+      "4      Rick Riordan               A Maldição do Titã   40.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)"
    ]
   },
   {
