--- a/Conceitos basicos/exercicio_3.ipynb
+++ b/Conceitos basicos/exercicio_3.ipynb
@@ -50,7 +50,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Testando particularidades da linguagem"
+   ]
   },
   {
    "cell_type": "code",
@@ -77,8 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Realmente não da pra somar direto string com int que nem no JS......  \n",
-    "#"
+    ">Realmente não da pra somar direto string com int que nem no JS......  \n"
    ]
   },
   {
